# sembl-stack

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  sembl.stack.yaml
.claude/: launch.json
.github/workflows/: release.yml  tests.yml
docs/: BUILD-PLAN.md  DEMO-investor.md  DESIGN-sembl-ide.md  HANDOFF-2026-07-10-o11-wpc.md  HANDOFF-2026-07-12-model-agnostic.md  HANDOFF-theia-ide.md  LAUNCH-PREP-JULY1.md  PLATFORM-MAP.md  PROCESS-ACTION-PLAN.md  PRODUCT-sembl-ide.md  ROADMAP-TO-PRODUCT.md  SPEC-O11-operator-agent-event-bus.md  SPEC-O12-behavioral-acceptance.md  SPEC-O14-manual-edit-adoption.md  SPEC-coderabbit-prep.md  SPEC-demo-shell.md  SPEC-gate-0.2.0.md  SPEC-ideation-and-chat-shell.md  SPEC-l8-rollback.md  SPEC-merge-stage.md  SPEC-reconcile-live.md  SPEC-review-standby.md  SPEC-stage-preview-as-evidence.md  SPEC-theia-factory-ide.md  SPEC-tui-phase0.md  SPEC-tui-phase1-onboarding.md  SURFACE-PLAN-tui.md  eval-metric-O3.md  memory-plane-hypothesis.md  process-self-improvement.md
docs/design/: ide-shell-mockup.html  sembl-ide-design-reference.html
eval/: README.md  SPEC-through-deploy.md  build_corpus.py  harness.py  through_deploy.py  two_axis.py
eval/corpus/01-greenfield-snake/: case.json
eval/corpus/02-feature-inscope/: case.json
eval/corpus/03-refactor-inscope/: case.json
eval/corpus/04-docs-tolerance/: case.json
eval/corpus/05-out-of-scope-infra/: case.json
eval/corpus/06-forbidden-workflow/: case.json
eval/corpus/07-fabricated-file/: case.json
eval/corpus/08-feature-with-stray/: case.json
eval/corpus/09-clean-diff-fabricated-report/: case.json
eval/corpus/10-rogue-combined/: case.json
eval/corpus/11-unevidenced-tests/: case.json
eval/corpus/12-over-churn/: case.json
eval/corpus/13-runtime-break-passes-gate/: case.json
eval/corpus/14-quality-defect-passes-gate/: case.json
examples/contract-invariant/: README.md  acceptance.json  foundry.toml
examples/contract-invariant/src/: Vault.sol
examples/contract-invariant/test/: Vault.invariant.t.sol
examples/flagship-feedback-board/: .env.example  .gitignore  README.md  acceptance.json  package-lock.json  package.json  sembl.stack.yaml  task.yaml  tsconfig.json
examples/flagship-feedback-board/scripts/: check-deploy-readiness.mjs  postdeploy-health.mjs  web-check-feedback-board.mjs
examples/flagship-feedback-board/specs/001-feedback-board/: bounds.json  requirements.md  tasks.md
examples/flagship-feedback-board/src/: middleware.ts
examples/flagship-feedback-board/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
examples/flagship-feedback-board/src/components/: auth-panel.tsx  feedback-board.tsx  feedback-form.tsx
examples/flagship-feedback-board/src/lib/: env.ts  (+1 more)
examples/flagship-feedback-board/supabase/: config.toml
examples/tasks/login-redirect/: README.md  task.yaml
ide/: package.json
ide/browser-app/: gen-esbuild.browser.mjs  gen-esbuild.node.mjs  package.json
ide/drift-view/: package.json
ide/factory-view/: package.json  tsconfig.json
ide/scripts/: install-shortcut.ps1  install-windows-ca-certs.js  launch.ps1  launch.vbs  make-icon.ps1
sembl_stack/: __init__.py  artifacts.py  bus.py  cli.py  config.py  contextgraph.py  discuss.py  doctor.py  drift.py  factory_guide.py  guide.py  ideation.py  loop.py  onboarding.py  operator_mcp.py  operator_shell.py  presets.py  profile.py  reconciliation.py  registry.py  rsi.py  runner.py  scaffold.py  session.py  specgraph.py  store.py  tracing.py  tui.py  views.py  wizard.py
sembl_stack/adapters/: _redact.py  acceptance_command.py  acceptance_contract.py  acceptance_web.py  base.py  codegraph_cbm.py  deploy_vercel.py  execute_agy.py  execute_aider.py  execute_claude.py  execute_mock.py  execute_opencode.py  merge_git.py  postdeploy_http.py  review_coderabbit.py  review_llm.py  review_mock.py  sandbox_worktree.py  spec_sembl.py  stage_web.py  verify_sembl.py
sembl_stack/gui/: __init__.py  launcher.py  server.py
sembl_stack/gui/static/: app.js  index.html  styles.css
sembl_stack/transport/: mcp_client.py
tests/: test_acceptance_artifacts.py  test_acceptance_command_runner.py  test_acceptance_contract_runner.py  test_acceptance_web_runner.py  test_agy_adapter.py  test_artifacts_store.py  test_bus.py  test_codegraph_cbm.py  test_contextgraph.py  test_deploy_postdeploy.py  test_discuss.py  test_drift.py  test_drift_resolve.py  test_factory_guide.py  test_gui_server.py  test_guide.py  test_ideation.py  test_init_stranger.py  test_loop_acceptance.py  test_loop_error_surfacing.py  test_loop_manifest.py  test_loop_prepare.py  test_loop_smoke.py  test_loop_stage.py  test_merge_git.py  test_onboarding_logic.py  test_opencode_adapter.py  test_operator_mcp.py  test_operator_shell.py  test_profile.py  test_reconciliation.py  test_review.py  test_rsi.py  test_run_events.py  test_run_executor.py  test_runner.py  test_scrub_secrets.py  test_session.py  test_spec_sembl.py  test_specgraph.py  (+3 more)
(+28 files in other folders)
