[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sembl-stack"
version = "0.1.0"
description = "An open, swappable spec-driven coding factory: Spec Kit plans, an agent writes, a sandbox contains, Sembl gates."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "langgraph>=0.2",   # L6 orchestrator — the real retry StateGraph engine. Core so the
                      # default install runs it, not the built-in fallback runner.
  "sembl>=0.1.20",    # L5 gate + L2 spec engine. Core because the DEFAULT config gates
  "mcp>=1.0",         # with sembl over MCP — a bare install must run the default stack.
]

[project.optional-dependencies]
# Back-compat aliases; everything below is now a core dep except langfuse/textual.
gate = ["sembl>=0.1.20"]
mcp = ["mcp>=1.0"]
orchestrate = ["langgraph>=0.2"]
trace = ["langfuse>=2.0"]
tui = ["textual>=0.50"]              # onboarding + wizard + the O6 run dashboard
# Everything, for the full reference factory.
all = ["sembl>=0.1.20", "mcp>=1.0", "langgraph>=0.2", "langfuse>=2.0", "textual>=0.50"]

[project.scripts]
sembl-stack = "sembl_stack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sembl_stack"]
